syntax = "proto3";

package judge;

service CodeJudge {
  rpc JudgeCode (SubmissionRequest) returns (SubmissionReply);
}

message SubmissionRequest {
  string github_url = 1;
}

message SubmissionReply {
  bool submitted = 1;
}
